<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <View
        android:id="@+id/divider8"
        android:layout_width="0dp"
        android:layout_height="10dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/divider5"
        android:layout_width="10dp"
        android:layout_height="0dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/divider7"
        app:layout_constraintStart_toEndOf="@+id/scrollView1"
        app:layout_constraintTop_toBottomOf="@+id/divider1"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/divider6"
        android:layout_width="10dp"
        android:layout_height="0dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/divider7"
        app:layout_constraintEnd_toStartOf="@+id/scrollView3"
        app:layout_constraintTop_toBottomOf="@+id/divider1"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/divider3"
        android:layout_width="10dp"
        android:layout_height="0dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/tvIP"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:clickable="false"
        android:enabled="false"
        android:fontFamily="monospace"
        android:maxWidth="200dp"
        android:minWidth="150dp"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_light"
        android:textIsSelectable="true"
        android:textOff="@string/ipv4"
        android:textOn="@string/connected"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/divider6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/divider5"
        app:layout_constraintTop_toBottomOf="@+id/divider1" />

    <View
        android:id="@+id/divider4"
        android:layout_width="0dp"
        android:layout_height="10dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toStartOf="@+id/divider6"
        app:layout_constraintStart_toEndOf="@+id/divider5"
        app:layout_constraintTop_toBottomOf="@+id/tvIP" />

    <View
        android:id="@+id/divider1"
        android:layout_width="0dp"
        android:layout_height="10dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider7"
        android:layout_width="0dp"
        android:layout_height="10dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toStartOf="@+id/divider3"
        app:layout_constraintStart_toEndOf="@+id/divider2" />

    <ImageButton
        android:id="@+id/button8"
        style="@android:style/Widget.Material.ImageButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@android:color/holo_blue_bright"
        android:clickable="true"
        android:contentDescription="@string/send"
        android:onClick="buttonClick"
        android:padding="0dp"
        android:scaleType="fitCenter"
        android:src="@mipmap/send"
        app:layout_constraintBottom_toTopOf="@+id/divider8"
        app:layout_constraintEnd_toStartOf="@+id/divider3"
        app:layout_constraintStart_toEndOf="@+id/textInputLayout" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:foregroundGravity="fill"
        android:minHeight="100dp"
        app:layout_constraintBottom_toTopOf="@+id/divider9"
        app:layout_constraintEnd_toStartOf="@+id/divider6"
        app:layout_constraintStart_toEndOf="@+id/divider5"
        app:layout_constraintTop_toBottomOf="@+id/divider4">

        <TextView
            android:id="@+id/body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:hint="@string/message_log"
            android:padding="5dp"
            android:text="@string/message_log"
            android:textSize="18sp" />
    </ScrollView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="filled"
        app:layout_constraintBottom_toTopOf="@+id/divider8"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintStart_toEndOf="@+id/divider2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputText1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/enter_message"
            android:imeOptions="actionDone"
            android:inputType="textVisiblePassword"
            android:singleLine="true"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="10dp"
        android:layout_height="0dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="70dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/divider7"
        app:layout_constraintStart_toEndOf="@+id/divider2"
        app:layout_constraintTop_toBottomOf="@+id/divider1"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/buttonListLeft"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="parent">


            <ToggleButton
                android:id="@+id/button1"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:clickable="true"
                android:contentDescription="@string/exit"
                android:foreground="@mipmap/power"
                android:onClick="buttonClick"
                android:padding="0dp"
                android:scaleType="fitCenter"
                android:src="@mipmap/power"
                android:textOff="@string/empty"
                android:textOn="@string/empty" />

            <ToggleButton
                android:id="@+id/button2"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:contentDescription="@string/sync"
                android:foreground="@mipmap/update"
                android:onClick="buttonClick"
                android:scaleType="fitCenter"
                android:textOff="@string/empty"
                android:textOn="@string/empty" />

            <ImageButton
                android:id="@+id/button3"
                style="@android:style/Widget.Material.ImageButton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:contentDescription="@string/save"
                android:onClick="buttonClick"
                android:padding="0dp"
                android:scaleType="fitCenter"
                android:src="@mipmap/floppy" />

            <ImageButton
                android:id="@+id/button4"
                style="@android:style/Widget.Material.ImageButton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:contentDescription="@string/time"
                android:onClick="buttonClick"
                android:padding="0dp"
                android:scaleType="fitCenter"
                android:src="@mipmap/clock" />

            <ImageButton
                android:id="@+id/button5"
                style="@android:style/Widget.Material.ImageButton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:contentDescription="@string/temperature"
                android:onClick="buttonClick"
                android:padding="0dp"
                android:scaleType="fitCenter"
                android:src="@mipmap/thermometer" />

            <ImageButton
                android:id="@+id/button6"
                style="@android:style/Widget.Material.ImageButton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:contentDescription="@string/gps"
                android:onClick="buttonClick"
                android:padding="0dp"
                android:scaleType="fitCenter"
                android:src="@mipmap/gps" />

            <ImageButton
                android:id="@+id/button7"
                style="@android:style/Widget.Material.ImageButton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:contentDescription="@string/clear"
                android:onClick="buttonClick"
                android:padding="0dp"
                android:scaleType="fitCenter"
                android:src="@mipmap/delete" />


        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="70dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/divider7"
        app:layout_constraintEnd_toStartOf="@+id/divider3"
        app:layout_constraintTop_toBottomOf="@+id/divider1"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/buttonListRight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ToggleButton
                android:id="@+id/buttonPumpSwitch"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:clickable="true"
                android:contentDescription="@string/pump_switch"
                android:foreground="@mipmap/go"
                android:onClick="pumpClick"
                android:padding="0dp"
                android:scaleType="fitCenter"
                android:textOff="@string/empty"
                android:textOn="@string/empty" />

            <ToggleButton
                android:id="@+id/buttonPumpA"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:contentDescription="@string/pump_a"
                android:foreground="@mipmap/a"
                android:onClick="pumpClick"
                android:padding="0dp"
                android:scaleType="fitCenter"
                android:textOff="@string/empty"
                android:textOn="@string/empty" />

            <ToggleButton
                android:id="@+id/buttonPumpB"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:clickable="true"
                android:contentDescription="@string/pump_b"
                android:foreground="@mipmap/b"
                android:onClick="pumpClick"
                android:padding="0dp"
                android:scaleType="fitCenter"
                android:textOff="@string/empty"
                android:textOn="@string/empty" />

            <ToggleButton
                android:id="@+id/buttonPumpC"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:clickable="true"
                android:contentDescription="@string/pump_c"
                android:foreground="@mipmap/c"
                android:onClick="pumpClick"
                android:padding="0dp"
                android:scaleType="fitCenter"
                android:textOff="@string/empty"
                android:textOn="@string/empty" />

            <ToggleButton
                android:id="@+id/buttonPumpD"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:clickable="true"
                android:contentDescription="@string/pump_d"
                android:foreground="@mipmap/d"
                android:onClick="pumpClick"
                android:padding="0dp"
                android:scaleType="fitCenter"
                android:textOff="@string/empty"
                android:textOn="@string/empty" />

        </LinearLayout>

    </ScrollView>

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:foregroundGravity="fill"
        app:layout_constraintBottom_toTopOf="@+id/divider7"
        app:layout_constraintEnd_toStartOf="@+id/divider6"
        app:layout_constraintStart_toEndOf="@+id/divider5"
        app:layout_constraintTop_toBottomOf="@+id/divider9">

        <TextView
            android:id="@+id/body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:hint="@string/csv"
            android:text="@string/csvHead"
            android:textSize="18sp" />
    </ScrollView>

    <View
        android:id="@+id/divider9"
        android:layout_width="0dp"
        android:layout_height="10dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@+id/divider7"
        app:layout_constraintEnd_toStartOf="@+id/divider6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/divider5"
        app:layout_constraintTop_toBottomOf="@+id/divider4" />

</androidx.constraintlayout.widget.ConstraintLayout>